config/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spawnery-system
  labels:
    app.kubernetes.io/name: spawnery
