config/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spawnery-operator
  namespace: spawnery-system
  labels:
    app.kubernetes.io/name: spawnery
    app.kubernetes.io/component: operator
spec:
  selector:
    app.kubernetes.io/name: spawnery
    app.kubernetes.io/component: operator
  ports:
    - name: agent
      port: 9443
      targetPort: agent
      protocol: TCP
